feat: 라벨 생성, 조회